--- a/api/src/package.json
+++ b/api/src/package.json
@@ -16,6 +16,8 @@
   "license": "MIT",
   "dependencies": {
     "angular": "1.5.8",
+    "basic-auth": "^1.1.0",
+    "crypto-js": "^3.1.8",
     "express": "4.14.0",
     "mongoose": "4.6.3"
   },
