--- a/interface/bower.json
+++ b/interface/bower.json
@@ -54,7 +54,9 @@
     "textAngular": "~1.4.6",
     "angular-xeditable": "~0.5.0",
     "ng-js-tree": "~0.0.7",
-    "angular-ui-select": "^0.19.6"
+    "angular-ui-select": "^0.19.6",
+    "angular-cookies": "~1.5.8",
+    "angular-crypto-js": "^1.0.6"
   },
   "resolutions": {
     "angular": "~1.5.9",
