--- a/api/src/package.json
+++ b/api/src/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "angular": "1.5.8",
     "basic-auth": "^1.1.0",
+    "body-parser": "^1.17.2",
     "crypto-js": "^3.1.8",
     "express": "4.14.0",
     "mongoose": "4.6.3"
